--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,23 @@ body {
 #qrcode rect {
     fill: var(--colour1);
 }
+
+@keyframes upAndDown {
+    0% { transform: translateY(0px) }
+    50% { transform: translateY(-10px) }
+    100% { transform: translateY(0px) }
+}
+
+.upAndDown {
+    animation: upAndDown 1s infinite;
+}
+
+@keyframes fadeInAndOut {
+    0% { opacity: 0 }
+    50% { opacity: 1 }
+    100% { opacity: 0 }
+}
+
+.fadeInAndOut {
+    animation: fadeInAndOut 1s infinite;
+}
